--- a/otel-collector-config.yaml
+++ b/otel-collector-config.yaml
@@ -10,7 +10,7 @@ processors:
 exporters:
   zipkin:
     endpoint: "http://zipkin:9411/api/v2/spans"
-    format: "proto" # Formato preferido para Zipkin
+    format: "proto"
   # Descomente a linha abaixo para debugar traces no console do collector
   # logging:
   #   verbosity: detailed
@@ -20,4 +20,4 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [zipkin] #, logging]
+      exporters: [zipkin]
